@@ -1,0 +1,5 @@
+<%args>
+    $keytab
+</%args>
+KRB5_KTNAME="<% $keytab %>"
+export KRB5_KTNAME
