@@ -1,4 +1,5 @@
 6.0
+	+ Group-based user authentication for commercial editions
 	+ Remove adzapper integration as it is no longer maintained in 18.04
 	+ HTTPS block rules are evaluated first and packets are rejected
 5.1
